--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,11 +31,11 @@
     <ul>
   
         <li>Relative sparsity for medical decision problems 
-          <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(manuscript)</a>, 
+          <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(paper)</a>, 
           <a href="https://youtu.be/572X1PhHJUs">(video)</a>
         </li>
         <li>Inference for relative sparsity 
-          <a href="https://arxiv.org/pdf/2306.14297.pdf">(manuscript)</a>
+          <a href="https://arxiv.org/pdf/2306.14297.pdf">(preprint)</a>
         </li>
         <li>How to use probability to describe medical decisions 
           <a href="https://wordpress.com/post/samweisenthal.com/120">(blog post)</a>
