--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,6 +49,9 @@
         <li>The kindness of decision analysis 
           <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(blog post)</a>
         </li>
+        <li>Decision analysis and malpractice
+          <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(blog post)</a>
+        </li>
     </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
@@ -111,8 +114,11 @@
       <li>Kaggle and chance 
         <a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">(forum)</a>
       </li>
-      <li>The addictiveness of recommender systems 
+      <li>The addictiveness of our devices 
         <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(blog)</a>
+      </li>
+      <li>What to do about addictive apps
+        <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/"></a>
       </li>
     </ul>    
 
