--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,19 +38,19 @@
           <a href="https://arxiv.org/pdf/2306.14297.pdf">(preprint)</a>
         </li>
         <li>How to use probability to describe medical decisions 
-          <a href="https://wordpress.com/post/samweisenthal.com/120">(blog post)</a>
+          <a href="https://wordpress.com/post/samweisenthal.com/120">(essay)</a>
         </li>
         <li>The roles assigned by decision analysis 
-          <a href="https://samweisenthal.com/2024/08/17/99/">(blog post)</a>
+          <a href="https://samweisenthal.com/2024/08/17/99/">(essay)</a>
         </li>  
         <li>Decision analysis and the real world 
-          <a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">(blog post)</a>
+          <a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">(essay)</a>
         </li> 
         <li>The kindness of decision analysis 
-          <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(blog post)</a>
+          <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(essay)</a>
         </li>
         <li>Decision analysis and malpractice
-          <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(blog post)</a>
+          <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
         </li>
     </ul>
 
@@ -106,7 +106,7 @@
     <p>On statistics, data science, machine learning, and society</p>
     <ul>
       <li>Data science to statistics in an academic medical center 
-        <a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">(blog)</a>
+        <a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">(essay)</a>
       </li>  
       <li>Statistics and machine learning 
         <a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">(forum)</a>
@@ -115,17 +115,17 @@
         <a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">(forum)</a>
       </li>
       <li>The addictiveness of our devices 
-        <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(blog)</a>
+        <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(essay)</a>
       </li>
       <li>What to do about addictive apps
-        <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/"></a>
+        <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
     </ul>    
 
     <p>Personal</p>
     <ul>
       <li>Re conflict in the Middle East 
-        <a href="https://samweisenthal.com/2024/11/10/welcome/">(blog)</a>
+        <a href="https://samweisenthal.com/2024/11/10/welcome/">(essay)</a>
       </li>
     </ul>
     
