--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -122,7 +122,7 @@
       </li>
     </ul>    
 
-    <p>Personal</p>
+    <p>Political</p>
     <ul>
       <li>Re conflict in the Middle East 
         <a href="https://samweisenthal.com/2024/11/10/welcome/">(essay)</a>
