--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,10 +26,9 @@
         </center>
     -->
     <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below.</p>
-
+    Also, feel free to check out my <a href="https://samweisenthal.com">blog</a>!
     <p>Medical decision making / decision theory / reinforcement learning</p> 
     <ul>
-  
         <li>Relative sparsity for medical decision problems 
           <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(paper)</a>, 
           <a href="https://youtu.be/572X1PhHJUs">(video)</a>
@@ -121,13 +120,14 @@
         <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
     </ul>    
-
+<!--
     <p>Political</p>
     <ul>
       <li>Re conflict in the Middle East 
         <a href="https://samweisenthal.com/2024/11/10/welcome/">(essay)</a>
       </li>
     </ul>
+    -->
     
   </article>
 </div><!-- /#main -->
