--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,8 +25,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below.</p>
-    Also, feel free to check out my <a href="https://samweisenthal.com">blog</a>!
+    <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below. Also, feel free to <a href="https://samweisenthal.com">check out my blog</a>!</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
     <ul>
         <li>Relative sparsity for medical decision problems 
