--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,8 +25,10 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Hi, I'm Sam! Welcome to my page.  I work in the intersection of statistics and medicine.  Some interests are listed below. Also, feel free to <a href="https://samweisenthal.com">check out my blog</a>!</p>
-    <p>Medical decision making / decision theory / reinforcement learning</p> 
+    <p>Hi, I'm Sam! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>!</p>
+    <p>Medical decision making / decision theory / reinforcement learning</p>
+
+    <!--
     <ul>
         <li>Relative sparsity for medical decision problems 
           <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(paper)</a>, 
@@ -90,6 +92,7 @@
     <p>A full list of my publications can be found 
       <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.
     </p>
+  
 
     <p>Teaching</p>
     <ul>
@@ -118,7 +121,8 @@
       <li>What to do about addictive apps
         <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
-    </ul>    
+    </ul>   
+      -->
 <!--
     <p>Political</p>
     <ul>
