--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,8 +26,8 @@
         </center>
     -->
         
-    <p>Hi, I'm Sam! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>!</p>
-    <!--
+    <p>Hi, I'm Sam! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to go directly to my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>!</p>
+    
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
         <li>Relative sparsity for medical decision problems 
@@ -122,7 +122,7 @@
         <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
     </ul>   
-      -->
+   
 <!--
     <p>Political</p>
     <ul>
