--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,28 +30,35 @@
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
-        <li>Relative sparsity for medical decision problems 
-          <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(paper)</a>, 
-          <a href="https://youtu.be/572X1PhHJUs">(video)</a>
-        </li>
-        <li>Inference for relative sparsity 
-          <a href="https://arxiv.org/pdf/2306.14297.pdf">(preprint)</a>
-        </li>
-        <li>How to use probability to describe medical decisions 
-          <a href="https://wordpress.com/post/samweisenthal.com/120">(essay)</a>
-        </li>
-        <li>The roles assigned by decision analysis 
-          <a href="https://samweisenthal.com/2024/08/17/99/">(essay)</a>
-        </li>  
-        <li>Decision analysis and the real world 
-          <a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">(essay)</a>
-        </li> 
-        <li>The kindness of decision analysis 
-          <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(essay)</a>
-        </li>
-        <li>Decision analysis and malpractice
-          <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
-        </li>
+      <li>Language models and medical decision making: treatment, evidence, imitation, and chat  
+  <a href="https://statmedhumanity.org/2025/07/03/treatment-evidence-imitation-and-chat/">(blog post)</a>, 
+  <a href="https://arxiv.org/pdf/2506.23040v1">(manuscript)</a>, 
+  <a href="https://open.substack.com/pub/samweisenthal/p/treatment-evidence-imitation-and?r=1cxbe4&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true">(substack)</a>
+</li>
+
+      
+       <li>Decision analysis and malpractice
+  <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
+</li>
+<li>The kindness of decision analysis 
+  <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(essay)</a>
+</li>
+<li>Decision analysis and the real world 
+  <a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">(essay)</a>
+</li> 
+<li>The roles assigned by decision analysis 
+  <a href="https://samweisenthal.com/2024/08/17/99/">(essay)</a>
+</li>  
+<li>How to use probability to describe medical decisions 
+  <a href="https://wordpress.com/post/samweisenthal.com/120">(essay)</a>
+</li>
+<li>Inference for relative sparsity 
+  <a href="https://arxiv.org/pdf/2306.14297.pdf">(preprint)</a>
+</li>
+<li>Relative sparsity for medical decision problems 
+  <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(paper)</a>, 
+  <a href="https://youtu.be/572X1PhHJUs">(video)</a>
+</li>
     </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
