--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,9 @@
   <a href="https://arxiv.org/pdf/2506.23040v1">(manuscript)</a>, 
   <a href="https://open.substack.com/pub/samweisenthal/p/treatment-evidence-imitation-and?r=1cxbe4&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true">(substack)</a>
 </li>
-
-      
+      <li>Reflections on relative sparsity
+        <a href="https://statmedhumanity.org/2025/04/04/reflections-on-relative-sparsity/">(essay)</a>
+      </li>
        <li>Decision analysis and malpractice
   <a href="https://samweisenthal.com/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
 </li>
@@ -60,7 +61,6 @@
   <a href="https://youtu.be/572X1PhHJUs">(video)</a>
 </li>
     </ul>
-
     <p>Environmental health / inverse reinforcement learning</p>
     <ul>
       <li>Optimality-based reward learning with applications to toxicology 
@@ -85,8 +85,11 @@
       </li>
     </ul>
 
-    <p>Diagnosis / Covid-19 / large language models </p>
+    <p>Diagnosis</p>
     <ul>
+<li>
+  <a href="https://arxiv.org/pdf/2503.15382">The information mismatch</a>
+</li>
       <li>ChatGPT and post-test probability 
         <a href="https://arxiv.org/pdf/2311.12188.pdf">(preprint)</a>
       </li>
@@ -95,24 +98,10 @@
         <a href="https://discourse.datamethods.org/t/determining-post-test-probability-of-covid-19/4723/38">(forum discussion)</a>
       </li>
     </ul>
-
-    <p>A full list of my publications can be found 
-      <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.
-    </p>
-  
-
-    <p>Teaching</p>
+    
+    <p>Culture</p>
     <ul>
-      <li>On prediction 
-        <a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">(forum)</a>
-      </li>
-      <li>Risk calculators 
-        <a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">(lecture)</a>
-      </li>
-    </ul>
-
-    <p>On statistics, data science, machine learning, and society</p>
-    <ul>
+      <li>Bayesian and frequentist statistics <a href="https://statmedhumanity.org/2025/03/09/am-i-cool/">(PowerPoint)</a></li>
       <li>Data science to statistics in an academic medical center 
         <a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">(essay)</a>
       </li>  
@@ -122,13 +111,30 @@
       <li>Kaggle and chance 
         <a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">(forum)</a>
       </li>
+      </ul>
+<p>Addiction</p>
+    <ul>
       <li>The addictiveness of our devices 
         <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(essay)</a>
       </li>
       <li>What to do about addictive apps
         <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
+          <li>Scroll breaker
+        <a href="https://statmedhumanity.org/2025/05/09/scroll-breaker-braker/">(essay)</a>
+      </li>
+
+      
     </ul>   
+        <p>Teaching</p>
+    <ul>
+      <li>On prediction 
+        <a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">(forum)</a>
+      </li>
+      <li>Risk calculators 
+        <a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">(lecture)</a>
+      </li>
+    </ul>
    
 <!--
     <p>Political</p>
