--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,11 @@
   <a href="https://statmedhumanity.org/2025/07/03/treatment-evidence-imitation-and-chat/">(blog post)</a>, 
   <a href="https://arxiv.org/pdf/2506.23040v1">(manuscript)</a>, 
   <a href="https://open.substack.com/pub/samweisenthal/p/treatment-evidence-imitation-and?r=1cxbe4&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true">(substack)</a>
-</li>
+      </li>
+    <li>Decision analysis and big pharma
+        <a href="https://statmedhumanity.org/2025/03/16/decision-analysis-and-the-pharmaceutical-industry/">(essay)</a>
+      </li>
+      
       <li>Reflections on relative sparsity
         <a href="https://statmedhumanity.org/2025/04/04/reflections-on-relative-sparsity/">(essay)</a>
       </li>
