--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
-      <li>Language models and medical decision making: treatment, evidence, imitation, and chat  
+      <li>Language models and medical decision making 
   <a href="https://statmedhumanity.org/2025/07/03/treatment-evidence-imitation-and-chat/">(blog post)</a>, 
   <a href="https://arxiv.org/pdf/2506.23040v1">(manuscript)</a>, 
   <a href="https://open.substack.com/pub/samweisenthal/p/treatment-evidence-imitation-and?r=1cxbe4&utm_campaign=post&utm_medium=web&showWelcomeOnShare=true">(substack)</a>
