--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
         </center>
     -->
         
-    <p>Hi, I'm Sam! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to go directly to my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! Otherwise, I list some interests below.</p>
+    <p>Hi, I'm Samuel! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to go directly to my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! Otherwise, I list some interests below.</p>
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
