--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
         </center>
     -->
         
-    <p>Hi, I'm Samuel! Welcome to my page.  I work in the intersection of statistics and medicine.  Feel free to go directly to my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! Otherwise, I list some interests below.</p>
+    <p>Hi, I'm Samuel! Welcome to my page.  I work at the intersection of statistics and medicine.  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! I also list some interests below.</p>
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
@@ -37,6 +37,9 @@
       </li>
     <li>Decision analysis and big pharma
         <a href="https://statmedhumanity.org/2025/03/16/decision-analysis-and-the-pharmaceutical-industry/">(essay)</a>
+      </li>
+          <li>Decision analysis and malpractice
+        <a href="https://statmedhumanity.org/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
       </li>
       
       <li>Reflections on relative sparsity
@@ -91,8 +94,8 @@
 
     <p>Diagnosis</p>
     <ul>
-<li>
-  <a href="https://arxiv.org/pdf/2503.15382">The information mismatch</a>
+<li> The information mismatch
+  <a href="https://arxiv.org/pdf/2503.15382">(preprint)</a>
 </li>
       <li>ChatGPT and post-test probability 
         <a href="https://arxiv.org/pdf/2311.12188.pdf">(preprint)</a>
