--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,9 +38,11 @@
     <li>Decision analysis and big pharma
         <a href="https://statmedhumanity.org/2025/03/16/decision-analysis-and-the-pharmaceutical-industry/">(essay)</a>
       </li>
-          <li>Decision analysis and malpractice
+      <!---
+          <li>Decision analysis and insurance
         <a href="https://statmedhumanity.org/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
       </li>
+      --->
       
       <li>Reflections on relative sparsity
         <a href="https://statmedhumanity.org/2025/04/04/reflections-on-relative-sparsity/">(essay)</a>
