--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
         </center>
     -->
         
-    <p>Hi, I'm Samuel! Welcome to my page.  I work at the intersection of statistics and medicine.  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! I also list some interests below.</p>
+    <p>Hi, I'm Sam! Welcome to my page.  I work at the intersection of statistics and medicine (and I am trying to integrate a more humanities-focused perspective therein).  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! I also list some work below (generally moved away from publishing and towards bloggin'---faster, fairer, more available to the public, and open for comments!).</p>
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
@@ -42,8 +42,7 @@
           <li>Decision analysis and insurance
         <a href="https://statmedhumanity.org/2025/01/27/decision-analysis-and-malpractice/">(essay)</a>
       </li>
-      --->
-      
+      --->    
       <li>Reflections on relative sparsity
         <a href="https://statmedhumanity.org/2025/04/04/reflections-on-relative-sparsity/">(essay)</a>
       </li>
@@ -110,6 +109,9 @@
     
     <p>Culture</p>
     <ul>
+      <li>Chat, images, and "AI"
+        <a href="https://statmedhumanity.org/2025/09/28/image-processing-chatting-and-ai/">(essay)</a>
+      </li>  
       <li>Bayesian and frequentist statistics <a href="https://statmedhumanity.org/2025/03/09/am-i-cool/">(PowerPoint)</a></li>
       <li>Data science to statistics in an academic medical center 
         <a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">(essay)</a>
@@ -121,12 +123,15 @@
         <a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">(forum)</a>
       </li>
       </ul>
+
+
+
 <p>Addiction</p>
     <ul>
-      <li>The addictiveness of our devices 
+      <li>Get off your phone!
         <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(essay)</a>
       </li>
-      <li>What to do about addictive apps
+      <li>How to get off your phone
         <a href="https://samweisenthal.com/2025/01/04/what-can-we-do-about-addictive-platforms/">(essay)</a>
       </li>
           <li>Scroll breaker
