--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
         </center>
     -->
         
-    <p>Hi, I'm Sam! Welcome to my page.  I work at the intersection of statistics and medicine (and I am trying to integrate a more humanities-focused perspective therein).  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! I also list some work below (generally moved away from publishing and towards bloggin'---faster, fairer, more available to the public, and open for comments!).</p>
+    <p>Hi, I'm Sam! Welcome to my page.  I work at the intersection of statistics and medicine (and I am trying to integrate a more humanities-focused perspective therein).  Feel free to check out my <a href="https://samweisenthal.com">blog</a>, <a href="https://samweisenthal.substack.com/">substack</a>, or <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! I also list some work below.</p>
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
