--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,8 @@
         
     <p>Hi, I'm Sam! Welcome to my page.  
       I work at the intersection of statistics and medicine (and trying to integrate a more humanities-focused perspective therein).  
-      Feel free to check out my <a href="https://samweisenthal.com">blog</a>, 
+      Feel free to check out my 
+      <a href="https://samweisenthal.com">blog</a>, 
       <a href="https://samweisenthal.substack.com/">substack</a>, or 
       <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">publications</a>! 
       I also list some work below.</p>
