--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,8 @@
     -->
        
     
-    <p>Hi, I'm Sam! Welcome to my page.  
+    <p>
+      Hi, I'm Sam! Welcome to my page.  
       I work at the intersection of statistics and medicine (and trying to integrate a more humanities-focused perspective therein).  
       Feel free to check out my 
       <a href="https://samweisenthal.com">blog</a>, 
