--- a/_layouts/thoughts.html
+++ b/_layouts/thoughts.html
@@ -21,7 +21,7 @@
         </center>
     -->
     <p>My research interest is at the intersection of statistics and medicine. More specific topics are listed below.</p>
-    <p>Medical decision making / decision theory / reinforcement learning</p> 
+    <p>Medical decision making / decision theory / reinforcement learning..</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
     <li>Inference for relative sparsity (<a href="https://arxiv.org/pdf/2306.14297.pdf">preprint</a>)</li>
