--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@
     
     <p>
       Hi, I'm Sam! Welcome to my page.  
-      I work at the intersection of statistics and medicine (and trying to integrate a more humanities-focused perspective therein).  
+      I work at the intersection of statistics and medicine.  
       Feel free to check out my 
       <a href="https://samweisenthal.com">blog</a>, 
       <a href="https://samweisenthal.substack.com/">substack</a>, or 
