--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,9 @@
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
+      <li>Decision analysis and medical research
+        <a href="https://statmedhumanity.org/2025/11/09/decision-analysis-and-medical-research/">(essay)</a>
+      </li>
       <li>Language models and medical decision making 
   <a href="https://statmedhumanity.org/2025/07/03/treatment-evidence-imitation-and-chat/">(blog post)</a>, 
   <a href="https://arxiv.org/pdf/2506.23040v1">(manuscript)</a>, 
