--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,11 @@
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
+ <li>GPT-5 and medical decision making
+        <a href="https://statmedhumanity.org/2025/12/01/gpt-5-and-medical-decisions/">(essay)</a>
+      </li>
+     
+      
       <li>Decision analysis and medical research
         <a href="https://statmedhumanity.org/2025/11/09/decision-analysis-and-medical-research/">(essay)</a>
       </li>
