--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,13 @@
     
     <p>Medical decision making / decision theory / reinforcement learning</p>
     <ul>
+
+
+ <li>Safe medical uses for generative LLMs
+        <a href="https://open.substack.com/pub/samweisenthal/p/best-uses-for-generative-large-language?r=1cxbe4&utm_campaign=post&utm_medium=web
+">(essay)</a>
+      </li>
+      
  <li>GPT-5 and medical decision making
         <a href="https://statmedhumanity.org/2025/12/01/gpt-5-and-medical-decisions/">(essay)</a>
       </li>
